force-app/main/default/objects/BusinessTrip__c/BusinessTrip__c.object-meta.xml
<CustomObject>
    <description>Objeto creado para guardar la información cabecera de los viajes comerciales, utilizados por el dept de exportación</description>
    <label>Business Trip</label>
    <nameField>
        <displayFormat>BT-{00000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>