force-app/main/default/objects/BusinessTrip__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>