force-app/main/default/objects/BusinessTrip__c/fields/Comments2__c.field-meta.xml
<CustomField>
    <fullName>Comments2__c</fullName>
    <description>Proporcionar información relacionada con nuevos descubrimientos, nuevas relaciones generadas, oportunidades de negocio futuras, nuevas sinergías o acuerdos, etc.</description>
    <label>Positive aspects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>