force-app/main/default/objects/BusinessTrip__c/fields/Comments3__c.field-meta.xml
<CustomField>
    <fullName>Comments3__c</fullName>
    <description>Proporcionar información relacionada con mejoras a realizar con un enfoque de mercado (oportunidad o amenaza)</description>
    <label>Areas for improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>