force-app/main/default/objects/BusinessTrip__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Proporcionar cualquier contexto de mercado, competencia y destacar tendencias importantes a tener en cuenta</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>