force-app/main/default/objects/BusinessTrip__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Fecha de fin de viaje</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>