force-app/main/default/objects/BusinessTrip__c/fields/FutureOpportunities__c.field-meta.xml
<CustomField>
    <fullName>FutureOpportunities__c</fullName>
    <description>Proporcionar información sobre las nuevas oportunidades de desarrollo de proyectos o negocio en las áreas visitadas</description>
    <label>Future Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>