force-app/main/default/objects/BusinessTrip__c/fields/LastVisit__c.field-meta.xml
<CustomField>
    <fullName>LastVisit__c</fullName>
    <label>Last Visit</label>
    <type>Date</type>
</CustomField>