force-app/main/default/objects/BusinessTrip__c/fields/MainObjectives__c.field-meta.xml
<CustomField>
    <fullName>MainObjectives__c</fullName>
    <label>Main Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>