force-app/main/default/objects/BusinessTrip__c/fields/MainRisks__c.field-meta.xml
<CustomField>
    <fullName>MainRisks__c</fullName>
    <label>Main Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>