force-app/main/default/objects/BusinessTrip__c/fields/MaterialUsedComment__c.field-meta.xml
<CustomField>
    <fullName>MaterialUsedComment__c</fullName>
    <description>Infiormaciín del materiial utilizado en las visitas comerciales y feedback obtenido del cliente, utilidad del mismo, necesidades identificadas o beneficios obtenidos</description>
    <label>Material Used Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>