force-app/main/default/objects/BusinessTrip__c/fields/RequestTrip__c.field-meta.xml
<CustomField>
    <fullName>RequestTrip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo donde se almacena el request de donde viene el trip, una vez se ha aprobado</description>
    <label>Request Trip</label>
    <referenceTo>BusinessTrip__c</referenceTo>
    <relationshipLabel>Business Trips</relationshipLabel>
    <relationshipName>Requests_Trips</relationshipName>
    <type>Lookup</type>
</CustomField>