force-app/main/default/objects/BusinessTrip__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Fecha de inicio del viaje</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>