force-app/main/default/objects/BusinessTrip__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDINGAPPROVAL</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>CONVERTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>