force-app/main/default/objects/BusinessTrip__c/fields/Strategies__c.field-meta.xml
<CustomField>
    <fullName>Strategies__c</fullName>
    <label>Strategies</label>
    <summaryForeignKey>BusinessTripStrategy__c.BusinessTrip__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>