force-app/main/default/objects/BusinessTrip__c/fields/Visits__c.field-meta.xml
<CustomField>
    <fullName>Visits__c</fullName>
    <label>Visits</label>
    <summaryForeignKey>BusinessTripVisit__c.BusinessTrip__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>