force-app/main/default/objects/BusinessTrip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Title__c</columns>
    <columns>Countries__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Strategies__c</columns>
    <columns>Visits__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>