force-app/main/default/objects/BusinessTrip__c/listViews/Requests.listView-meta.xml
<ListView>
    <fullName>Requests</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Countries__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Strategies__c</columns>
    <columns>Visits__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>REQUEST</value>
    </filters>
    <label>Requests</label>
</ListView>