force-app/main/default/objects/BusinessTrip__c/listViews/Trip_approvers_manager_BusinessTrip.listView-meta.xml
<ListView>
    <fullName>Trip_approvers_manager_BusinessTrip</fullName>
    <filterScope>Queue</filterScope>
    <label>Trip approvers manager</label>
    <queue>Trip_approvers_manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>